# logging_course_yt

./: .env-example  README.md  logging.conf.json  logging.json  pyproject.toml
src/logging_course/: config_logging.py  final_config_logging.py  final_main.py  handlers.py  lesson01.py  lesson01_func.py  lesson02.py  lesson03.py  lesson04.py  lesson05.py  lesson05_01.py  lesson06.py  lesson07.py  lesson07_01.py  lesson08.py  lesson09.py  lesson10.py  lesson11.py  lesson12.py  main.py  settings.py
